fix: resolve SonarCloud issues across codebase
Address ~115 SonarCloud findings including all blockers, criticals,
and most major/minor issues:

- Fix GitHub Actions glob pattern security (S6573)
- Add assertions to empty test cases (S2699)
- Resolve field name clash Ada/ADA in AssetType (S1845)
- Replace replaceAll with replace for literal strings (S5361)
- Convert Cip68Constants from interface to final class (S1214)
- Reduce cognitive complexity in V1ApiPostgresMetadataIndexer and
  MetadataCliApplication by extracting methods (S3776)
- Extract string constants to eliminate duplication (S1192)
- Replace System.out/err with SLF4J logger in CLI (S106)
- Use constructor injection instead of field injection (S6813)
- Add private constructors to utility classes (S1118)
- Make Constants fields static final (S1444, S1104)
- Replace deprecated @Schema required with requiredMode (S1874)
- Replace @RequestMapping with @GetMapping/@PostMapping (S4488)
- Remove unnecessary lambda parentheses (S1611)
- Remove unused imports (S1128)
- Make DEFAULT_PROPERTY_NAMES immutable via List.of (S2386)
- Rename SyncStatus.syncStatus field to avoid class name clash (S1700)
- Remove public modifier from JUnit 5 test methods (S5786)
- Fix locale-dependent percentage formatting in health endpoint

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>